tests/snapshots/examples_fixtures/errors__Aurora.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/Aurora.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E007]: DUPLICATE PARAMETER

Duplicate parameter name: `x`.

  --> examples/errors/Aurora.flx:1:3
  |
1 |   fn echo(x, x) {
  |   ^

Hint:
  Each parameter must have a unique name.
== stdout ==
<not executed>
